tests/baselines/reference/scannerNumericLiteral6.errors.txt
==== tests/cases/compiler/scannerNumericLiteral6.ts (3 errors) ====
    1e+
     ~
!!! scannerNumericLiteral6.ts(1,2): error TS1005: ';' expected.
       
!!! scannerNumericLiteral6.ts(1,4): error TS1005: 'expression' expected.
     ~
!!! scannerNumericLiteral6.ts(1,2): error TS2095: Cannot find name 'e'.